--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
@@ -26,4 +26,11 @@ Ingenieria\ProfesorBundle\Entity\Subgrupo:
             targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
             mappedBy: subgrupo
 
-    lifecycleCallbacks: {  }
+    oneToOne:
+        lider:
+            targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
+            joinColumn:
+                name: lider
+                referencedColumnName: id
+
+lifecycleCallbacks: {  }
