add relationships subgrupo and activity

--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
@@ -32,5 +32,10 @@ Ingenieria\ProfesorBundle\Entity\Subgrupo:
             joinColumn:
                 name: lider
                 referencedColumnName: id
+        actividad:
+            targetEntity: Ingenieria\ProfesorBundle\Entity\Actividad
+            joinColumn:
+                name: actividad
+                referencedColumnName: id
 
 lifecycleCallbacks: {  }
