add horario field and frontend

--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
@@ -67,6 +67,9 @@ Ingenieria\ProfesorBundle\Entity\Actividad:
         numeroCupos:
             type: integer
             column: numero_cupos
+        horario:
+            type: string
+            length: '100'
         descripcion:
             type: text
             length: 1000
