add entity encuentro

--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Subgrupo.orm.yml
@@ -26,6 +26,10 @@ Ingenieria\ProfesorBundle\Entity\Subgrupo:
             targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
             mappedBy: subgrupo
 
+        encuentros:
+            targetEntity: Ingenieria\ProfesorBundle\Entity\Encuentro
+            mappedBy: subgrupo
+
     oneToOne:
         lider:
             targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
