--- a/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
@@ -73,3 +73,15 @@ ingenieria_profesor_estudiantes_singrupos:
 ingenieria_profesor_asignar_subgrupo:
     path:     /profesor/asignar-colectivo/{id}
     defaults: { _controller: IngenieriaProfesorBundle:Default:asignarSubgrupo }
+
+ingenieria_profesor_ver_encuentros:
+    pattern:  /profesor/encuentros/{id}
+    defaults: { _controller: IngenieriaProfesorBundle:Default:verEncuentros }
+
+ingenieria_profesor_registrar_encuentro:
+    pattern:  /profesor/registrar-encuentro/id={id}
+    defaults: { _controller: IngenieriaProfesorBundle:Default:registrarEncuentro }
+
+ingenieria_profesor_actualizar_encuentro:
+    pattern:  /profesor/actualizar-encuentro/id={id}
+    defaults: { _controller: IngenieriaProfesorBundle:Default:actualizarEncuentro }
