fix relation subgrupo and activity

--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
@@ -86,4 +86,8 @@ Ingenieria\ProfesorBundle\Entity\Actividad:
             targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
             mappedBy: actividad
 
+        subgrupos:
+            targetEntity: Ingenieria\ProfesorBundle\Entity\Subgrupo
+            mappedBy: actividad
+
     lifecycleCallbacks: {  }
