add field comunicacion box check in actividad

--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Actividad.orm.yml
@@ -40,6 +40,9 @@ Ingenieria\ProfesorBundle\Entity\Actividad:
         pensamiento:
             type: boolean
             nullable: true
+        comunicacion:
+            type: boolean
+            nullable: true
         autonomia:
             type: boolean
             nullable: true
@@ -68,6 +71,9 @@ Ingenieria\ProfesorBundle\Entity\Actividad:
             type: integer
             column: numero_cupos
         horario:
+            type: string
+            length: '100'
+        espacio:
             type: string
             length: '100'
         descripcion:
